Refactored PathCollection into smaller classes

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Extension\Windows\ToolWindowInitializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\Contracts\DefaultConstraintTests.cs" />
+    <Compile Include="Shared\Contracts\DeploySourcePathsTests.cs" />
+    <Compile Include="Shared\Contracts\DeployTargetPathsTests.cs" />
+    <Compile Include="Shared\Contracts\DirectoryPathsTests.cs" />
     <Compile Include="Shared\Contracts\PathCollectionTests.cs" />
     <Compile Include="Shared\Contracts\SecureResultTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectPropertiesTests.cs" />
