Extended DacService tests to return pre-deployment and post-deployment scripts

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -141,6 +141,9 @@
     <EmbeddedResource Include="Resources\TestDatabase_AuthorWithDefaultConstraints.dacpac" />
     <EmbeddedResource Include="Resources\TestDatabase_AuthorWithLessDefaultConstraints.dacpac" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\TestDatabase_WithPreAndPostDeployment.dacpac" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
