--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Extension\ViewModels\ViewModelBaseTests.cs" />
     <Compile Include="Extension\Windows\ToolWindowInitializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\Contracts\CreateDeployFilesResultTests.cs" />
     <Compile Include="Shared\Contracts\DefaultConstraintTests.cs" />
     <Compile Include="Shared\Contracts\DeploySourcePathsTests.cs" />
     <Compile Include="Shared\Contracts\DeployTargetPathsTests.cs" />
