Implemented new validation for the publish profile and current configuration for #11

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Shared\Contracts\DeployTargetPathsTests.cs" />
     <Compile Include="Shared\Contracts\DirectoryPathsTests.cs" />
     <Compile Include="Shared\Contracts\PathCollectionTests.cs" />
+    <Compile Include="Shared\Contracts\PublishProfileTests.cs" />
     <Compile Include="Shared\Contracts\SecureResultTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectPropertiesTests.cs" />
     <Compile Include="Shared\Contracts\SqlProjectTests.cs" />
