Update azure-pipelines.yml for Azure Pipelines
Finalized pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# .NET Desktop
-# Build and run tests for .NET Desktop or Windows classic desktop solutions.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
-
 trigger:
  branches:
    include:
@@ -23,10 +18,10 @@ jobs:
 - job: Build
   strategy:
     matrix:
-      # 2019:
-      #   imageName: 'windows-2019'
-      #   extensionVersion: '2019'
-      #   vsVersion: '16.0'
+      2019:
+        imageName: 'windows-2019'
+        extensionVersion: '2019'
+        vsVersion: '16.0'
       2022:
         imageName: 'windows-2022'
         extensionVersion: '2022'
@@ -84,43 +79,27 @@ jobs:
     condition: eq(variables.isPullRequest, False)
 
   - task: CopyFiles@2
-    displayName: Copy test results to artifacts
-    condition: always()
+    name: CopyDeploymentData
+    displayName: Copy deployment data to artifact staging directory
     inputs:
-      SourceFolder: 'D:\a\'
-      Contents: '_temp/TestResults/**'
+      SourceFolder: '$(Build.SourcesDirectory)'
+      Contents: |
+       deployment\*
+       README.md
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
+  - task: CopyFiles@2
+    name: CopyVSIX
+    displayName: Copy VSIX to artifact staging directory
+    inputs:
+      SourceFolder: '$(Build.SourcesDirectory)'
+      Contents: |
+       **\bin\Release\*.vsix
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      flattenFolders: true
+
   - task: PublishBuildArtifacts@1
-    displayName: Publish build artifacts
-    condition: always()
+    displayName: Publish VSIX build artifact
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-      ArtifactName: 'drop'
-      publishLocation: 'Container'
-
-  # - task: CopyFiles@2
-  #   name: CopyDeploymentData
-  #   displayName: Copy deployment data to artifact staging directory
-  #   inputs:
-  #     SourceFolder: '$(Build.SourcesDirectory)'
-  #     Contents: |
-  #      deployment\*
-  #      README.md
-  #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
-
-  # - task: CopyFiles@2
-  #   name: CopyVSIX
-  #   displayName: Copy VSIX to artifact staging directory
-  #   inputs:
-  #     SourceFolder: '$(Build.SourcesDirectory)'
-  #     Contents: |
-  #      **\bin\Release\*.vsix
-  #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
-  #     flattenFolders: true
-
-  # - task: PublishBuildArtifacts@1
-  #   displayName: Publish VSIX build artifact
-  #   inputs:
-  #     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-  #     ArtifactName: VSIX
+      ArtifactName: VSIX
