Always run sonarcloud tasks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ jobs:
   steps:
   - task: SonarCloudPrepare@1
     displayName: Prepare SonarCloud
-    condition: eq(variables.isPullRequest, False)
+    #condition: eq(variables.isPullRequest, False)
     inputs:
       projectName: 'SSDT Lifecycle Extension'
       projectKey: 'SSDTLifecycleExtension'
@@ -81,7 +81,7 @@ jobs:
 
   - task: SonarCloudAnalyze@1 
     displayName: Run SonarCloud Analyzer
-    condition: eq(variables.isPullRequest, False)
+    #condition: eq(variables.isPullRequest, False)
 
   - task: CopyFiles@2
     name: CopyDeploymentData
