--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,9 +74,12 @@ jobs:
     continueOnError: true
     inputs:
       testSelector: 'testAssemblies'
-      testAssemblyVer2: '**\*UnitTests*.dll'
+      testAssemblyVer2: |
+        **\*test*.dll
+        !**\*TestAdapter.dll
+        !**\obj\**
       searchFolder: '$(System.DefaultWorkingDirectory)'
-      #runSettingsFile: '$(Build.SourcesDirectory)\src\UnitTestsShared\test.runsettings'
+      runSettingsFile: '$(Build.SourcesDirectory)\src\UnitTestsShared\test.runsettings'
       codeCoverageEnabled: true
       platform: '$(buildPlatform)'
       configuration: '$(buildConfiguration)'
