--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,9 @@ jobs:
 
   - task: NuGetToolInstaller@0
     displayName: NuGet Tool Installer
+    inputs:
+      versionSpec: '6.x'
+      checkLatest: true
 
   - task: NuGetCommand@2
     displayName: Restore NuGet packages
@@ -71,7 +74,8 @@ jobs:
     continueOnError: true
     inputs:
       testSelector: 'testAssemblies'
-      testAssemblyVer2: '**\*UnitTests*.dll'
+      testAssemblyVer2: |
+        **\SSDTLifecycleExtension.UnitTests*.dll
       searchFolder: '$(System.DefaultWorkingDirectory)'
       runSettingsFile: '$(Build.SourcesDirectory)\src\UnitTestsShared\test.runsettings'
       codeCoverageEnabled: true
@@ -104,16 +108,6 @@ jobs:
        **\bin\Release\*.vsix
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
       flattenFolders: true
-
-  - task: CopyFiles@2
-    name: CopyCoverage
-    displayName: Copy coverage report to artifact staging directory
-    condition: always()
-    inputs:
-      SourceFolder: 'D:\a\'
-      Contents: '_temp/TestResults/**'
-      TargetFolder: '$(Build.ArtifactStagingDirectory)'
-      flattenFolders: false
 
   - task: PublishBuildArtifacts@1
     displayName: Publish VSIX build artifact
