--- a/src/SSDTLifecycleExtension2022/SSDTLifecycleExtension2022.csproj
+++ b/src/SSDTLifecycleExtension2022/SSDTLifecycleExtension2022.csproj
@@ -75,8 +75,8 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2022.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.SqlServer.DacFx.x64">
-      <Version>150.5282.3</Version>
+    <PackageReference Include="Microsoft.SqlServer.DacFx">
+      <Version>162.0.52</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.31902.203" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
