--- a/src/Shared/Shared.csproj
+++ b/src/Shared/Shared.csproj
@@ -9,11 +9,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS8602;CS8603;CS8604;CS8618;CS8625</WarningsAsErrors>
+    <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS8602;CS8603;CS8604;CS8618;CS8625;CS4014</WarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS8602;CS8603;CS8604;CS8618;CS8625</WarningsAsErrors>
+    <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS8602;CS8603;CS8604;CS8618;CS8625;CS4014</WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
