Update project configs, class visibility, and dependencies
- Updated `SSDTLifecycleExtension2026.csproj`.
- Changed visibility of `AddCustomFooterModifier`, `AddCustomHeaderModifier`, and `TrackDacpacVersionModifier` classes from `internal` to `public`.
- Removed `Microsoft.SqlServer.DacFx` package reference and updated project reference to `SSDTLifecycleExtension2026` in `UnitTests2026.csproj`.
- Updated binding redirect for `Microsoft.VisualStudio.Threading` in `app.config` to support version `17.14.0.0`.

--- a/src/SSDTLifecycleExtension2026/SSDTLifecycleExtension2026.csproj
+++ b/src/SSDTLifecycleExtension2026/SSDTLifecycleExtension2026.csproj
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <MinimumVisualStudioVersion>18.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+    <UseCodebase>true</UseCodebase>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
@@ -14,8 +15,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform>AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{0DCB1A4C-B2D8-4F4D-8789-C116CD0459E0}</ProjectGuid>
@@ -24,10 +24,10 @@
     <RootNamespace>SSDTLifecycleExtension2026</RootNamespace>
     <AssemblyName>SSDTLifecycleExtension2026</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RuntimeIdentifier>win</RuntimeIdentifier>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
-    <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
     <IncludeDebugSymbolsInVSIXContainer>false</IncludeDebugSymbolsInVSIXContainer>
     <IncludeDebugSymbolsInLocalVSIXDeployment>false</IncludeDebugSymbolsInLocalVSIXDeployment>
